# daily_journal

./: README.md  check.sh  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
fastapi_version/: .env.template  README.md  docker-compose.yml  main.py
fastapi_version/alembic/versions/: 2025_08_08_1938-77a0a51fad5f_create_users_table.py  2025_08_08_2047-6aff2de8a784_create_tasks_table.py
fastapi_version/api/: __init__.py  tasks.py  users.py  utils.py
fastapi_version/core/: config.py
fastapi_version/core/models/: __init__.py  base.py  db_helper.py  task.py  user.py
fastapi_version/core/schemas/: tasks.py  users.py
fastapi_version/crud/: task.py  user.py
fastapi_version/security/: utils.py
fastapi_version/templates/: delete_id.html  login.html  mistakes.html  task_id.html
flask-version/: docker-compose.yml  main.py
flask-version/api/: __init__.py  task.py  user.py  utils.py
flask-version/core/: config.py
flask-version/core/models/: __init__.py  base.py  task.py  user.py
flask-version/core/schemas/: task.py  user.py
flask-version/crud/: task.py  user.py
flask-version/static/: style.css
flask-version/templates/: create_task.html  delete_id.html  login.html  mistakes.html  register.html  task_id.html  tasks.html  user_page.html
flask_version/: .env.template  README.md  main.py
flask_version/api/: __init__.py  task.py  user.py  utils.py
flask_version/core/: config.py
flask_version/core/models/: __init__.py  base.py  task.py  user.py
flask_version/core/schemas/: task.py  user.py
flask_version/crud/: task.py  user.py
flask_version/static/: style.css
flask_version/templates/: _formhelpers.html  create_task.html  register.html  tasks.html  user_page.html
