[project]
name = "daily-journal"
version = "0.1.0"
description = ""
authors = [
    {name = "Katerina",email = "mel.katya@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psycopg2 (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
